# mira4-assembler-patches

./: GETTING_STARTED  HELP_WANTED  INSTALL  Makefile.am  Makefile.in  README  README_build.html  aclocal.m4  configure  configure.ac  ylwrap
distribution/: Makefile  Makefile.am  Makefile.in  README
doc/: Makefile  Makefile.am  Makefile.in
doc/docbook/: Makefile  Makefile.am  Makefile.in  book_definitiveguide.xml  chap_bonus_part.xml  chap_dataprep_part.xml  chap_denovo_part.xml  chap_est_part.xml  chap_faq_part.xml  chap_hard_part.xml  chap_installation_part.xml  chap_intro_part.xml  chap_logfiles_part.xml  chap_mapping_part.xml  chap_mirautils_part.xml  chap_preface_part.xml  chap_reference_part.xml  chap_results_part.xml  chap_seqadvice_part.xml  chap_seqtechdesc_part.xml  chap_sra_part.xml  copyrightfile
minidemo/bbdemo2/: runme.sh
minidemo/estdemo2/: README
minidemo/solexa1/: runme.sh
minidemo/solexa2/: runme.sh
src/: Makefile.am  Makefile.in  version.H
src/caf/: Makefile.in  caf.C  caf.H  caf_flexer.cc  caf_flexer.ll
src/debuggersupport/: Makefile.in
src/errorhandling/: Makefile.in  errorhandling.C  errorhandling.H
src/io/: Makefile.in  annotationmappings.C  annotationmappings.H  exp.C  exp_flexer.cc  exp_flexer.ll  fasta.C  fasta.H  fastq-mira.C  gap4_ft_so_map.xxd  generalio.C  ncbiinfoxml.C  phd.C  scf.C  so.obo
src/memorc/: Makefile.am  Makefile.in  main.C  memorc.C  memorc.H
src/mira/: CHANGES.txt  Makefile.am  Makefile.in  TODO  adaptorsregex.solexa.xxd  ads.C  ads.H  adsfacts.C  adsfacts.H  align.C  align.H  assembly.C  assembly.H  assembly_info.C  assembly_info.H  assembly_io.C  assembly_misc.C  assembly_output.C  assembly_reduceskimhits.C  assembly_swalign.C  bloomfilter.C  bloomfilter.H  contig.C  contig.H  contig_analysis.C  contig_consensus.C  contig_covanalysis.C  contig_edit.C  contig_featureinfo.C  contig_output.C  contig_pairconsistency.C  dataprocessing.C  dataprocessing.H  dynamic.C  dynamic.H  estassembly.C  gbf_parse.C  gbf_parse.H  gff_parse.C  gff_parse.H  (+42 more)
src/modules/: Makefile.am  Makefile.in  misc.C  misc.H  mod_bait.C  mod_bait.H  mod_convert.C  mod_convert.H  mod_dbgreplay.C  mod_memestim.C  mod_mira.C  mod_mira.H  mod_tagsnp.C
src/progs/: Makefile.am  Makefile.in  mira.C  miramer.C  miratest.C  quirks.C
src/scripts/: Makefile.am  Makefile.in
src/stdinc/: Makefile.in  defines.H  stlincludes.H  types.H
src/support/: Makefile.in
src/util/: Makefile.am  Makefile.in  boostiostrutil.H  dptools.C  dptools.H  fileanddisk.C  fileanddisk.H  fmttext.C  fmttext.H  machineinfo.C  misc.C  misc.H  progressindic.H  stlimprove.H
